# aws-cost-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
aws_cost_cli/: budget.py  cli.py  cost_explorer.py  formatter.py  notify.py  periods.py
tests/: test_budget.py  test_cost_explorer.py  test_periods.py
