[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cost-cli"
version = "0.1.0"
description = "A CLI tool to analyze and monitor your AWS spending"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["aws", "cost", "cli", "cloud", "finops", "cost-explorer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "rich>=13.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
aws-cost = "aws_cost_cli.cli:main"

[project.urls]
Homepage = "https://github.com/Mide69/aws-cost-cli"
Repository = "https://github.com/Mide69/aws-cost-cli"
Issues = "https://github.com/Mide69/aws-cost-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aws_cost_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
